--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body {
     place-content: center;
 }
 
+body *{
+    font-family: 'Rubik';
+    letter-spacing: -0.02em;
+}
+
 #calculator{
     width: 356px;
     height: 566px;
@@ -29,4 +34,56 @@ body {
         0px 8px 17px rgba(0,0,0,0.29),
         inset 0px 6px 8px rgba(255,255,255,0.1),
         inset 0px -4px 5px rgba(0,0,0,0.22);
+}
+
+#display{
+    margin-top: 54px;
+    padding-inline: 54px;
+}
+
+#last-calc{
+    text-align: right;
+    font-size: 20px;
+    line-height: 140%;
+    color: #6B6B6B;
+}
+
+#result{
+    margin-top: 8px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#result span{
+    font-size: 36px;
+    line-height: 140%;
+    color: #ebebeb;
+}
+
+#keyboard{
+    margin-top: 26px;
+    margin-inline: 32px;
+    padding-bottom: 32px;
+}
+
+button{
+    border: 0;
+    width: 64px;
+    height: 64px;
+
+    background: linear-gradient(180deg, rgba(0,0,0,0.05)0%,rgba(255,255,255,0.05)100%)#2D2A37;
+
+    box-shadow: 
+        0px 11px 7px rgba(0,0,0,0.01),
+        0px 7px 7px rgba(0,0,0,0.04),
+        0px 4px 6px rgba(0,0,0,0.1),
+        0px 2px 4px rgba(0,0,0,0,26),
+        0px 0px 2px rgba(0,0,0,0.29),
+        inset 0px 2px 3px rgba(255,255,255,0.06);
+    
+    border-radius: 999px;
+
+    font-size: 24px;
+    line-height: 28px;
+    color: #EBEBEB;
 }
