--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body *{
 
 #calculator{
     width: 356px;
-    height: 566px;
+    /* height: 566px; */
 
     background: #2D2A37;
     border-radius: 48px;
@@ -61,9 +61,11 @@ body *{
 }
 
 #keyboard{
-    margin-top: 26px;
-    margin-inline: 32px;
-    
+    /* margin-top: 26px;
+    margin-inline: 32px; */
+    padding: 26px 32px 32px;
+
+
     display: grid;
     grid-template-columns: repeat(4,1fr);
     gap: 12px;
@@ -89,6 +91,10 @@ button{
     font-size: 24px;
     line-height: 28px;
     color: #EBEBEB;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .secondary{
